<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group
        android:checkableBehavior="single"
        >


        <item
            android:id="@+id/item_home"
            android:icon="@drawable/bottom_icon_home"
            android:title="@string/home"
            />

        <item
            android:id="@+id/item_orders"
            android:icon="@drawable/bottom_icon_shopping"
            android:title="@string/orders"
            />

        <item
            android:id="@+id/item_inbox"
            android:icon="@drawable/bottom_icon_message"
            android:title="@string/inbox"
            />

        <item
            android:id="@+id/item_wallet"
            android:icon="@drawable/bottom_icon_purse"
            android:title="@string/wallet"
            />

        <item
            android:id="@+id/item_profile"
            android:icon="@drawable/bottom_icon_person"
            android:title="@string/profile"
            />



    </group>
</menu>