<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_new_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".activities.CreateNewPassword">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        >

        <ImageView
        android:id="@+id/iv_create_new_pass_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/create_new_password_image"
        android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/tv_create_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_your_new_password"
            android:layout_marginStart="20dp"
            android:layout_below="@id/iv_create_new_pass_image"
            android:layout_marginTop="50dp"
            android:textColor="@color/primary"
            android:fontFamily="@font/poppins_regular"
            android:textSize="17sp"
            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/tv_create_password"
            android:hint="@string/password"
            android:drawableStart="@drawable/icon_lock"
            android:drawableEnd="@drawable/visibility_icon"
            android:inputType="textPassword"
            android:background="@drawable/et_custom"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            android:paddingHorizontal="10dp"
            android:drawablePadding="10dp"
            />

        <EditText
            android:id="@+id/et_password_rewrite"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/et_password"
            android:hint="@string/re_enter_password"
            android:drawableStart="@drawable/icon_lock"
            android:drawableEnd="@drawable/visibility_icon"
            android:inputType="textPassword"
            android:background="@drawable/et_custom"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            android:paddingHorizontal="10dp"
            android:drawablePadding="10dp"
            />

        <LinearLayout
            android:id="@+id/ll_remember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password_rewrite"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            >

            <CheckBox
                android:id="@+id/cb_remember_me"
                android:layout_width="30dp"
                android:layout_height="30dp"


                />

            <TextView
                android:id="@+id/tv_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textColor="@color/primary"
                android:fontFamily="@font/poppins_regular"
                />

        </LinearLayout>

        <Button

            android:id="@+id/bt_new_password_continue"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/ll_remember"
            android:text="@string/bt_continue"
            android:backgroundTint="@color/primary"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="40dp"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            />


    </RelativeLayout>




</ScrollView>