<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/ll_show_offer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_custom"
        android:layout_margin="20dp"

        >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:id="@+id/discount_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20"
                android:textStyle="bold"
                android:textSize="33sp"
                />

            <TextView
                android:id="@+id/tv_week_deals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week_deals"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/tv_deal_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount_description"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"

                />




        </LinearLayout>

        <ImageView
            android:id="@+id/iv_deals_car_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/vehicle_placeholder"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>