<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="15dp"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/top_deal_cars1"
                android:layout_width="230dp"
                android:layout_height="200dp"
                android:src="@drawable/car_1"
                android:background="@drawable/custom_bg_top_deal"

                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_heart_favourite"
                android:layout_toEndOf="@id/top_deal_cars1"
                android:layout_marginStart="-50dp"
                android:layout_marginTop="10dp"
                />



        </RelativeLayout>

        <TextView
            android:id="@+id/tv_top_deal1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmw_m4_series"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_rating"
                android:layout_marginEnd="15dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4_5"
                android:textSize="18sp"
                android:layout_marginEnd="15dp"

                />

            <TextView
                android:layout_width="55dp"
                android:layout_height="30dp"
                android:text="@string/new1"
                android:textSize="18sp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/custom_bg_top_deal"
                android:padding="2dp"
                android:paddingStart="8dp"


                />



        </LinearLayout>

        <TextView
            android:id="@+id/tv_top_deal_price1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_155_000"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            />



    </LinearLayout>

</androidx.cardview.widget.CardView>